src/components/index.scss
.bIuPdp {
    background-size: 1356px 1147px;

}

.iPZMPS {
    background-size: 1359px 1177px !important;

}

.kgzdKx {
    background-size: 1362px 798px !important;


}

.paraRelaunch .sc-bdVaJa {


    @media only screen and (max-width: 480px) {
    }

    @media only screen and (max-width: 1466px) {
        background-size: 1459px 989px !important;
    }
}

.sc-htpNat {


    @media only screen and (max-width: 480px) {
        html {
            font-size: 100%;
        }
    }

    @media only screen and (max-width: 1466px) {
        background-size: 1459px 777px !important;
    }
}

